--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
+name: RSS Stared
 
+on:
+  schedule:
+    - cron: '0 * * * *'
+
+jobs:
+  fetch:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Fetch RSS articles
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Fetch articles
+        run: go run main.go
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
