--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
         run: |
           go build .
 
+      - name: Add execute permission to main
+          run: chmod +x ./main    
+
       - name: Run
         run: |
           ./main
