--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
         run: |
           go build .
 
-      
+      - name: Add execute permission to main
+        run: chmod +x ./main    
 
       - name: Run
         run: |
