--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,8 @@ name: Generate HTML files for RSS items
 on:
   schedule:
     - cron: "0 0 * * *"
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+
 
 jobs:
   build:
