每隔一个小时执行一次

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Generate HTML files for RSS items
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
+ schedule:
+    - cron: "0 */1 * * *"
   workflow_dispatch:
 
 
