--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,11 @@ jobs:
         run: |
           go get -v -t -d ./...
 
+      - name: Fix oauth2.go build issue
+        run: |
+          cd $GOPATH/src/golang.org/x/oauth2
+          sed -i '1s/^/\/\/ +build !js\n\n/' oauth2.go
+
       - name: Build
         run: |
           go build -o main main.go
