--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
          go mod download golang.org/x/oauth2
          echo "GOPATH: $GOPATH"
          echo "go mod cache: $(go env GOMODCACHE)"
-         cd $GOPATH/pkg/mod/golang.org/x/oauth2@v0.0.0-20210819172956-2ccce9b4a323
+         cd /home/runner/go/pkg/mod/golang.org/x/oauth2@v0.0.0-20210819172956-2ccce9b4a323
          sed -i '1s/^/\/\/ +build !js\n\n/' oauth2.go
 
       - name: Build
