--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,9 @@ jobs:
 
       - name: Fix oauth2.go build issue
         run: |
+         export GOPATH=/home/runner/go
          go mod download golang.org/x/oauth2
-         echo "GOPATH: $GOPATH"
-         echo "go mod cache: $(go env GOMODCACHE)"
-         cd /home/runner/go/pkg/mod/golang.org/x/oauth2@v0.0.0-20210819172956-2ccce9b4a323
+         cd $GOPATH/pkg/mod/golang.org/x/oauth2@v0.0.0-20210819172956-2ccce9b4a323
          sed -i '1s/^/\/\/ +build !js\n\n/' oauth2.go
 
       - name: Build
