--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
          export GOPATH=/home/runner/go
          go get golang.org/x/oauth2
          cd $GOPATH/pkg/mod/golang.org/x/oauth2@v0.0.0-20210819172956-2ccce9b4a323
-         sed -i '1s/^/\/\/ +build !js\n\n/' oauth2.go
+         sed -i 's/\/\/go:build/\/\/ +build/g' oauth2.go
 
       - name: Build
         run: |
