--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,10 +28,21 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            const article = await github.actions.getArtifact('article');
-            const publishTime = article.published_at;
+            const { Octokit } = require('@octokit/rest');
+            const octokit = new Octokit({ auth: process.env.GITHUB_TOKEN });
+
+            const articleArtifact = await octokit.rest.actions.artifacts.getArtifact({
+              owner: 'zxjack',
+              repo: 'my-repository',
+              artifact_id: 'article'
+            });
+
+            const publishTime = articleArtifact.published_at;
             console.log(publishTime);
-          result-format: string
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          debug: false
+          user-agent: actions/github-script
+          result-encoding: string
 
       - name: Update index.html
         run: |
